<resources>
    <string name="app_name">Camera2</string>

    <string name="flashlight_auto">auto</string>
    <string name="flashlight_on">on</string>
    <string name="flashlight_off">off</string>
    <string name="flashlight_torch">torch</string>

    <string name="permission_tip">Tip</string>
    <string name="permission_msg">request permission failed! \n
            you can grant permission in setting interface -> Permissions</string>
    <string name="permission_btn_setting">go to setting</string>
    <string name="permission_btn_quit">quit</string>

    <string name="mode_photo">Normal</string>
    <string name="mode_dual_camera">Dual Camera</string>
    <string name="mode_professional">Professional</string>

    <string-array name="module_list">
        <item>@string/mode_photo</item>
        <item>@string/mode_dual_camera</item>
        <item>@string/mode_professional</item>
    </string-array>

    <string name="settings_msg">Settings</string>
    <string name="settings_camera">Camera settings</string>
    <string name="settings_disable">Camera settings not available</string>

    <!--for setting start-->
    <string name="setting_camera_id">Camera id</string>
    <string name="setting_main_camera_id">Main camera id</string>
    <string name="setting_aux_camera_id">Aux camera id</string>
    <string name="setting_camera_id_0">Open Camera 0</string>
    <string name="setting_camera_id_1">Open Camera 1</string>
    <string name="setting_camera_id_2">Open Camera 2</string>
    <string name="setting_camera_id_3">Open Camera 3</string>
    <string name="setting_camera_value_0">0</string>
    <string name="setting_camera_value_1">1</string>
    <string name="setting_camera_value_2">2</string>
    <string name="setting_camera_value_3">3</string>
    <string-array name="setting_camera_id_entries">
        <item>@string/setting_camera_id_0</item>
        <item>@string/setting_camera_id_1</item>
        <item>@string/setting_camera_id_2</item>
        <item>@string/setting_camera_id_3</item>
    </string-array>
    <string-array name="setting_camera_id_entries_value">
        <item>@string/setting_camera_value_0</item>
        <item>@string/setting_camera_value_1</item>
        <item>@string/setting_camera_value_2</item>
        <item>@string/setting_camera_value_3</item>
    </string-array>

    <string name="setting_picture_size">Picture size</string>
    <string name="setting_picture_format">Picture format</string>
    <string name="setting_preview_size">Preview size</string>

    <string name="setting_restart_preview">Restart preview after take picture </string>
    <!--for setting end-->

    <!--for menu setting start-->
    <string name="menu_switch_camera">Switch</string>
    <string name="menu_flash_title">Flash</string>
    <array name="menu_flash_icon">
        <item>@drawable/ic_vector_flash_auto</item>
        <item>@drawable/ic_vector_flash_off</item>
        <item>@drawable/ic_vector_flash_on</item>
        <item>@drawable/ic_vector_flash_torch</item>
    </array>
    <array name="menu_flash_entries">
        <item>@string/flash_auto</item>
        <item>@string/flash_off</item>
        <item>@string/flash_on</item>
        <item>@string/flash_torch</item>
    </array>
    <string name="flash_auto">auto</string>
    <string name="flash_off">off</string>
    <string name="flash_on">on</string>
    <string name="flash_torch">torch</string>
    <!--for menu setting end-->

</resources>
