<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Camera">
        <ListPreference
            android:title="@string/setting_camera_id"
            android:key="pref_camera_id"
            android:entries="@array/setting_camera_id_entries"
            android:entryValues="@array/setting_camera_id_entries_value"
            android:defaultValue="@string/setting_camera_value_0"/>
        <ListPreference
            android:title="@string/setting_picture_format"
            android:key="pref_picture_format"/>
        <ListPreference
            android:title="@string/setting_picture_size"
            android:key="pref_picture_size"/>
        <ListPreference
            android:title="@string/setting_preview_size"
            android:key="pref_preview_size"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Dual Camera">
        <ListPreference
            android:title="@string/setting_main_camera_id"
            android:key="pref_main_camera_id"
            android:entries="@array/setting_camera_id_entries"
            android:entryValues="@array/setting_camera_id_entries_value"
            android:defaultValue="@string/setting_camera_value_0"/>
        <ListPreference
            android:title="@string/setting_picture_format"
            android:key="pref_main_picture_format"/>
        <ListPreference
            android:title="@string/setting_picture_size"
            android:key="pref_main_picture_size"/>
        <ListPreference
            android:title="@string/setting_preview_size"
            android:key="pref_main_preview_size"/>
        <ListPreference
            android:title="@string/setting_aux_camera_id"
            android:key="pref_aux_camera_id"
            android:entries="@array/setting_camera_id_entries"
            android:entryValues="@array/setting_camera_id_entries_value"/>
        <ListPreference
            android:title="@string/setting_picture_format"
            android:key="pref_aux_picture_format"/>
        <ListPreference
            android:title="@string/setting_picture_size"
            android:key="pref_aux_picture_size"/>
        <ListPreference
            android:title="@string/setting_preview_size"
            android:key="pref_aux_preview_size"/>
    </PreferenceCategory>


</PreferenceScreen>